--- a/app/src/main/res/layout/activity_daftar.xml
+++ b/app/src/main/res/layout/activity_daftar.xml
@@ -8,24 +8,26 @@
     android:background="#FF0DBFAC"
     android:orientation="vertical">
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5pt"
-        app:cardCornerRadius="5pt">
+
+    <ImageView
+        android:layout_width="50pt"
+        android:layout_height="50pt"
+        android:layout_gravity="center"
+        android:src="@drawable/icon_applikasi"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_margin="5pt">
+
         <TextView
             android:id="@+id/id_textDaftar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:text="Isi Data Dibawah"
+            android:text="Lengkapi Data Dibawah."
             android:textColor="#000"
             android:textSize="9pt" />
 
@@ -96,7 +98,6 @@
             android:singleLine="true" />
         </android.support.design.widget.TextInputLayout>
         </LinearLayout>
-    </android.support.v7.widget.CardView>
 
     <!--for progress loading-->
     <RelativeLayout
@@ -127,10 +128,11 @@
         android:layout_gravity="right"
         android:paddingBottom="5pt"
         android:paddingLeft="10pt"
+        android:background="#b3ffff"
         android:paddingRight="10pt"
         android:paddingTop="5pt"
         android:text="Daftar"
         android:textAllCaps="false"
-        android:textColor="#FF0DBFAC"
+        android:textColor="#000"
         android:textSize="9pt" />
 </LinearLayout>
