--- a/app/src/main/res/layout/activity_lokasi.xml
+++ b/app/src/main/res/layout/activity_lokasi.xml
@@ -19,6 +19,14 @@
         <include
             android:id="@+id/toolbar"
             layout="@layout/layout_toolbar" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Pilih Nama Rumah Sakit Untuk Menunjukan Lokasi"
+            android:textSize="8pt"
+            android:gravity="center"
+            android:textColor="#000"
+            android:textStyle="bold"/>
 
         <com.google.android.gms.ads.AdView
             xmlns:ads="http://schemas.android.com/apk/res-auto"
