--- a/app/src/main/res/layout/activity_tambah_spesialis_advent.xml
+++ b/app/src/main/res/layout/activity_tambah_spesialis_advent.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer"
     android:fitsSystemWindows="true"
-    tools:context=".MenuTambah.TambahSpesialis">
+    tools:context=".MenuTambah.TambahSpesialisAdvent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,6 +17,39 @@
         <include
             android:id="@+id/toolbar"
             layout="@layout/layout_toolbar" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10pt">
+            <TextView
+                android:id="@+id/pilihSP"
+                android:layout_marginLeft="5pt"
+                android:layout_width="60pt"
+                android:layout_height="wrap_content"
+                android:text="Pilih Spesialis"
+                android:textColor="#000"
+                android:textSize="7pt" />
+
+            <Spinner
+                android:id="@+id/spinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/pilihSP"
+                android:layout_alignParentStart="true"
+                android:layout_marginLeft="2pt"
+                android:layout_marginTop="10pt"
+                android:entries="@array/pilihSpesialis"
+                android:textColor="#000"></Spinner>
+
+            <EditText
+                android:layout_width="110pt"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5pt"
+                android:layout_marginLeft="5pt"
+                android:layout_below="@id/pilihSP"
+                android:enabled="false"/>
+        </RelativeLayout>
 
 
         <LinearLayout
@@ -105,9 +138,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="5pt"
             android:background="#f2f2f2"
-            android:text="Tambah" />
+            android:text="Tambah"/>
+        <Button
+            android:id="@+id/btnCek"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:background="#f2f2f2"
+            android:padding="2pt"
+            android:layout_marginLeft="5pt"
+            android:text="Lihat Spesialis"/>
     </RelativeLayout>
 
     </LinearLayout>
