--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer"
     android:fitsSystemWindows="true"
-    tools:context=".MenuOpsiAdmin.TambahSpesialisAdvent">
+    tools:context=".MenuOpsiAdmin.EditActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -128,35 +128,26 @@
                 android:textColor="#000" />
         </LinearLayout>
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="5pt">
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5pt">
 
-        <Button
-            android:id="@+id/btnTambah"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:background="#f2f2f2"
-            android:text="Tambah"/>
-        <Button
-            android:id="@+id/btnCek"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:background="#f2f2f2"
-            android:padding="2pt"
-            android:layout_marginLeft="5pt"
-            android:text="Lihat Spesialis"/>
-    </RelativeLayout>
+            <Button
+                android:id="@+id/btnEdit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:background="#f2f2f2"
+                android:text="Simpan Perubahan"/>
+        </RelativeLayout>
 
     </LinearLayout>
 
     <android.support.design.widget.NavigationView
         android:id="@+id/navigation_view"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="start"
         app:headerLayout="@layout/layout_header"
         app:menu="@menu/item_navigasi"/>
