--- a/app/src/main/res/layout/activity_ubah_password.xml
+++ b/app/src/main/res/layout/activity_ubah_password.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer"
     android:fitsSystemWindows="true"
@@ -10,7 +10,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="#FF0DBFAC">
 
@@ -18,15 +18,9 @@
             android:id="@+id/toolbar"
             layout="@layout/layout_toolbar" />
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5pt"
-        app:cardCornerRadius="7pt">
-
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
@@ -97,7 +91,6 @@
             </android.support.design.widget.TextInputLayout>
 
         </LinearLayout>
-    </android.support.v7.widget.CardView>
 
     <RelativeLayout
         android:layout_width="wrap_content"
