--- a/app/src/main/res/drawable-v24/bg_drawer.xml
+++ b/app/src/main/res/drawable-v24/bg_drawer.xml
@@ -2,18 +2,16 @@
 <shape  xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid
-        android:color="#fff">
+        android:color="#FF0DBFAC">
 
     </solid>
     <padding
         android:bottom="10dp"
         android:left="10dp"
-        android:top="10dp"
         android:right="10dp">
 
     </padding>
-    <corners
-        android:radius="10dp">
+    <corners>
 
     </corners>
 </shape>
