--- a/app/src/main/res/layout/activity_bantuan.xml
+++ b/app/src/main/res/layout/activity_bantuan.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="#FF0DBFAC">
+        android:background="#FF95DED6">
 
         <include
             android:id="@+id/toolbar"
@@ -39,6 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:background="#FF0DBFAC"
         app:headerLayout="@layout/layout_header"
         app:menu="@menu/item_navigasi"/>
 
