--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="#FF0DBFAC">
+        android:background="#FF95DED6">
 
         <include
             android:id="@+id/toolbar"
@@ -104,7 +104,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:background="#f2f2f2"
+                android:background="#FF0DBFAC"
                 android:text="Simpan Perubahan"/>
         </RelativeLayout>
 
@@ -115,6 +115,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
+        android:background="#FF0DBFAC"
         app:headerLayout="@layout/layout_header"
         app:menu="@menu/item_navigasi"/>
 
