--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -11,32 +11,45 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#FF0DBFAC"
+        android:background="#FF95DED6"
         android:measureWithLargestChild="false"
-        android:paddingTop="1pt"
         android:orientation="vertical">
 
-        <include
-            android:id="@+id/toolbar"
-            layout="@layout/layout_toolbar" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="30pt"
+            android:background="#FF0DBFAC"
+            android:gravity="center"
+            android:layout_gravity="center">
+
+            <android.support.v7.widget.Toolbar
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:buttonGravity="bottom"
+                android:gravity="center"
+                android:paddingBottom="6pt"
+                android:foregroundGravity="center"
+                android:id="@+id/toolbar">
+            </android.support.v7.widget.Toolbar>
+
+        </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5pt"
             android:layout_marginBottom="5pt"
+            android:layout_marginTop="8pt"
             android:orientation="horizontal">
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:cardBackgroundColor="#f2f2f2"
-                app:cardCornerRadius="5pt">
+                app:cardBackgroundColor="#FF0DBFAC">
 
                 <ViewFlipper
                     android:id="@+id/v_flipper"
                     android:layout_width="match_parent"
-                    android:layout_height="70pt"
+                    android:layout_height="80pt"
                     android:layout_margin="2pt"
                     android:layout_centerVertical="true"></ViewFlipper>
             </android.support.v7.widget.CardView>
@@ -71,6 +84,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:background="#FF0DBFAC"
         app:headerLayout="@layout/layout_header"
         app:menu="@menu/item_navigasi"/>
 </android.support.v4.widget.DrawerLayout>
