--- a/app/src/main/res/layout/activity_info_akun.xml
+++ b/app/src/main/res/layout/activity_info_akun.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="#FF0DBFAC">
+        android:background="#FF95DED6">
 
         <include
             android:id="@+id/toolbar"
@@ -49,6 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardCornerRadius="10pt"
+            app:cardBackgroundColor="#FF0DBFAC"
             android:layout_marginBottom="5pt">
             <TextView
                 android:id="@+id/Displayemail"
@@ -65,6 +66,7 @@
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:cardBackgroundColor="#FF0DBFAC"
             app:cardCornerRadius="10pt"
             android:layout_marginBottom="5pt"
             android:onClick="changePass">
@@ -90,6 +92,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardCornerRadius="10pt"
+            app:cardBackgroundColor="#FF0DBFAC"
             android:layout_marginBottom="5pt"
             android:onClick="logOut">
             <TextView
@@ -117,6 +120,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:background="#FF0DBFAC"
         app:headerLayout="@layout/layout_header"
         app:menu="@menu/item_navigasi"/>
 
