--- a/app/src/main/res/layout/activity_tambah_spesialis_advent.xml
+++ b/app/src/main/res/layout/activity_tambah_spesialis_advent.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="#FF0DBFAC">
+        android:background="#FF95DED6">
 
         <include
             android:id="@+id/toolbar"
@@ -138,14 +138,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:background="#f2f2f2"
+            android:background="#FF0DBFAC"
             android:text="Tambah"/>
         <Button
             android:id="@+id/btnCek"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:background="#f2f2f2"
+            android:background="#FF0DBFAC"
             android:padding="2pt"
             android:layout_marginLeft="5pt"
             android:text="Lihat Spesialis"/>
@@ -158,6 +158,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:background="#FF0DBFAC"
         app:headerLayout="@layout/layout_header"
         app:menu="@menu/item_navigasi"/>
 
