--- a/app/src/main/res/layout/activity_ubah_password.xml
+++ b/app/src/main/res/layout/activity_ubah_password.xml
@@ -115,6 +115,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:background="#FF0DBFAC"
         app:headerLayout="@layout/layout_header"
         app:menu="@menu/item_navigasi"/>
 
