--- a/app/src/main/res/layout/layout_header.xml
+++ b/app/src/main/res/layout/layout_header.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="90pt"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#E6E6E6"
+    android:background="#FF95DED6"
     android:orientation="vertical">
 
     <RelativeLayout
