--- a/app/src/main/res/layout/layout_toolbar.xml
+++ b/app/src/main/res/layout/layout_toolbar.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/bg_drawer"
-    android:layout_marginTop="3pt"
-    android:layout_marginBottom="3pt">
+    android:layout_marginBottom="3pt"
+    android:id="@+id/toolbar">
+
 </android.support.v7.widget.Toolbar>
