--- a/app/src/main/res/layout/activity_list_info_dokter_spesialis.xml
+++ b/app/src/main/res/layout/activity_list_info_dokter_spesialis.xml
@@ -30,6 +30,13 @@
 
     </LinearLayout>
 
+    <FrameLayout
+        android:id="@+id/frameFrag"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </FrameLayout>
+
     <android.support.design.widget.NavigationView
         android:id="@+id/navigation_view"
         android:layout_width="wrap_content"
