--- a/app/src/main/res/layout/activity_list_spesialis.xml
+++ b/app/src/main/res/layout/activity_list_spesialis.xml
@@ -3,21 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".CustomeList.ListSpesialis">
-
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="5pt"
-        android:layout_marginRight="5pt"
-        android:layout_marginBottom="2pt"
-        app:cardCornerRadius="5pt">
-
 
         <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="2pt">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -51,16 +42,6 @@
                 />
 
         </LinearLayout>
-
-            <ImageView
-                android:layout_width="25pt"
-                android:layout_height="25pt"
-                android:layout_alignParentRight="true"
-                android:layout_centerInParent="true"
-                android:src="@drawable/ic_next"/>
         </RelativeLayout>
-
-
-    </android.support.v7.widget.CardView>
 
 </RelativeLayout>
